--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,57 @@
 * {padding:0;margin:0;border:0;}
 html, body {
 height:100%;
+font-size:100%;
 background:linear-gradient(to bottom, #262626 0%, #535353 50%, #141414 100%);
 }
+.c-buttons {
+position:relative;
+float:right;
+z-index:999;
+top:20px;right:20px;
+width:60px;height:60px;
+border:2px solid #87847d;
+border-radius:32px;
+}
+.c-buttons button {
+position:absolute;
+cursor:pointer;
+display:inline-block;
+width:30px;height:30px;
+border-radius:15px;
+font-size:2em;
+line-height:15px;
+color:#dd9828;
+padding:4px;
+background:#fed546;
+border-bottom:3px solid #dd9828;
+}
+.btn-upp {top:-15px;left:15px;}
+.btn-rgt {top:15px;right:-15px;}
+.btn-lft {top:15px;left:-15px;}
+.btn-dwn {bottom:-15px;left:15px;}
+
+.ab-buttons {
+position:relative;
+float:right;
+clear:right;
+z-index:999;
+top:20px;right:20px;
+width:80px;height:80px;
+margin:-20px 40px 0 0;
+}
+.ab-buttons button {
+position:absolute;
+cursor:pointer;
+display:inline-block;
+width:40px;height:40px;
+border-radius:20px;
+font-size:1.5em;
+line-height:15px;
+padding:4px;
+}
+.btn-a {right:0;bottom:0;color:#073366;background:#0948a3;border-bottom:3px solid #073366;}
+.btn-b {color:#128c50;background:#15995c;border-bottom:3px solid #0f7b4d;}
 
 /* /!\ You need to add vendor prefixes in order to render the CSS properly (or simply use http://leaverou.github.io/prefixfree/) /!\ */
 #tridiv {
@@ -20,12 +69,14 @@ box-shadow:inset 0 0 0 1px rgba(0, 0, 0, 0.4);
 .scene, .shape, .face, .face-wrapper, .cr {
 position:absolute;
 transform-style:preserve-3d;
+transition:all 5s ease-in-out;
 }
 .scene {
-width:80em;height:80em;
+height:80em;width:78em;/*should be 80, but i've offset it*/
 top:50%;left:50%;
 margin:-40em 0 0 -40em;
 transform:rotateX(-20deg) rotateY(-27deg);
+transition: all 2.4s ease-in-out;
 }
 .shape {
 top:50%;
