--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,32 @@ padding:4px;
 .btn-a {right:0;bottom:0;color:#073366;background:#0948a3;border-bottom:3px solid #073366;}
 .btn-b {color:#128c50;background:#15995c;border-bottom:3px solid #0f7b4d;}
 
+.d-pad {
+position:absolute;;
+float:left;
+z-index:999;
+top:30px;left:30px;
+width:60px;height:60px;
+padding:5px;
+background:#b8b8b8;
+border-radius:35px;
+}
+.d-pad button {
+position:absolute;
+cursor:pointer;
+display:inline-block;
+width:20px;height:20px;
+border-radius:3px;
+font-size:100%;
+line-height:10px;
+color:#59595b;
+background:#68686a;
+}
+.dir-upp {top:5px;left:25px;}
+.dir-rgt {top:25px;right:5px;}
+.dir-lft {top:25px;left:5px;}
+.dir-dwn {bottom:5px;left:25px;}
+
 /* /!\ You need to add vendor prefixes in order to render the CSS properly (or simply use http://leaverou.github.io/prefixfree/) /!\ */
 #tridiv {
 perspective:800px;
@@ -62,7 +88,7 @@ position:absolute;
 overflow:hidden;
 width:100%;height:100%;
 background:transparent;
-font-size:312.5%;
+font-size:375%;
 }
 .face {
 box-shadow:inset 0 0 0 1px rgba(0, 0, 0, 0.4);
@@ -147,7 +173,7 @@ opacity:1;
 width:3.8em;
 height:5em;
 margin:-2.5em 0 0 -1.9em;
-transition: margin 1.3s ease-in-out;
+transition:all 1.3s ease-in-out;
 }
 .cub-1 .ft {
 transform:translateZ(0.45em);
@@ -172,9 +198,9 @@ background-color:#FFFFFF;
 margin:-4.5em 0 0 -7.9em;
 transform:translate3d(0em, 2em, 2em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
 }
-.nus-001 .face {background:rgba(232, 234, 242, 1);}
-.nus-001 .photon-shader {background-color:rgba(232, 234, 242, 1);}
-.nus-001 .lt .photon-shader {background-color:rgba(203, 204, 205, 1);}
+.nus-001 .face {background:#e8eaf2;}
+/*.nus-001 .photon-shader {background:#e8eaf2;}*/
+.nus-001 .lt .photon-shader {background-color:#ccc;}
 .nus-001 .ft .photon-shader {background-image:url(../img/nus-001.jpg);}
 
 /*002*/
@@ -191,7 +217,7 @@ transform:translate3d(0em, 1em, 1em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
 margin:-2.5em 0 0 -1.9em;
 transform:translate3d(0em, 0em, 0em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
 }
-.nus-003 .photon-shader {background-color:#9e342e;}
+.nus-003 .photon-shader {background-color:#e5363b;}
 .nus-003 .lt .photon-shader {background-color:#160706;}
 .nus-003 .ft .photon-shader {background-image:url(../img/nus-003.jpg);}
 
@@ -212,6 +238,8 @@ transform:translate3d(0em, -2em, -2em) rotateX(0deg) rotateY(0deg) rotateZ(0deg)
 .nus-005 .photon-shader {background-color:#232725;}
 .nus-005 .lt .photon-shader {background-color:#010707;}
 .nus-005 .ft .photon-shader {background-image:url(../img/nus-005.jpg);}
+
+
 
 
 /*006*/
@@ -236,7 +264,6 @@ transform:translate3d(0em, 1em, -4em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
 .nus-008 .cub-1 {
 margin:-2.5em 0 0 -1.9em;
 transform:translate3d(0em, 0em, -5em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
-
 }
 .nus-008 .photon-shader {background-color:#107ec9;}
 .nus-008 .lt .photon-shader {background-color:#005fb5;}
@@ -244,8 +271,8 @@ transform:translate3d(0em, 0em, -5em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
 
 /*009*/
 .nus-009 .cub-1 {
-margin:-2.5em 0 0 0.9em;
-transform:translate3d(0em, 0em, -6em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+margin:-1.5em 0 0 0.9em;
+transform:translate3d(0em, -1em, -6em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
 }
 .nus-009 .photon-shader {background-color:#ccc;}
 .nus-009 .lt .photon-shader {background-color:#888;}
@@ -259,6 +286,54 @@ transform:translate3d(0em, -2em, -7em) rotateX(0deg) rotateY(0deg) rotateZ(0deg)
 .nus-010 .photon-shader {background-color:#04378f;}
 .nus-010 .lt .photon-shader {background-color:#032053;}
 .nus-010 .ft .photon-shader {background-image:url(../img/nus-010.jpg);}
+
+
+
+
+/*011*/
+.nus-011 .cub-1 {
+margin:-4.5em 0 0 -7.9em;
+transform:translate3d(0em, 2em, -8em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+}
+.nus-011 .photon-shader {background-color:#232725;}
+.nus-011 .lt .photon-shader {background-color:#010707;}
+.nus-011 .ft .photon-shader {background-image:url(../img/nus-011.jpg);}
+
+/*012*/
+.nus-012 .cub-1 {
+margin:-3.5em 0 0 -4.9em;
+transform:translate3d(0em, 1em, -9em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+}
+.nus-012 .photon-shader {background-color:#64d6f8;}
+.nus-012 .lt .photon-shader {background-color:#53b3d0;}
+.nus-012 .ft .photon-shader {background-image:url(../img/nus-012.jpg);}
+
+/*013*/
+.nus-013 .cub-1 {
+margin:-2.5em 0 0 -1.9em;
+transform:translate3d(0em, 0em, -10em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+}
+.nus-013 .photon-shader {background-color:#232725;}
+.nus-013 .lt .photon-shader {background-color:#010707;}
+.nus-013 .ft .photon-shader {background-image:url(../img/nus-013.jpg);}
+
+/*014*/
+.nus-014 .cub-1 {
+margin:-1.5em 0 0 0.9em;
+transform:translate3d(0em, -1em, -11em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+}
+/*.nus-014 .photon-shader {background:#e8eaf2;}*/
+.nus-014 .lt .photon-shader {background-color:#ccc;}
+.nus-014 .ft .photon-shader {background-image:url(../img/nus-014.jpg);}
+
+/*015*/
+.nus-015 .cub-1 {
+margin:-0.5em 0 0 3.9em;
+transform:translate3d(0em, -2em, -12em) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+}
+.nus-015 .photon-shader {background-color:#f1faf7;}
+.nus-015 .lt .photon-shader {background-color:#e0e2e1;}
+.nus-015 .ft .photon-shader {background-image:url(../img/nus-015.jpg);}
 
 
 /*javascript*/
